--- a/packages/toolbox/package.json
+++ b/packages/toolbox/package.json
@@ -14,6 +14,11 @@
     "@fiad/cli": "^0.0.1"
   },
   "peerDependencies": {
+    "gsap": ">= 3.2.6",
+    "ismobilejs": ">= 1.0.4",
+    "lodash": ">= 4.17.15"
+  },
+  "dependencies": {
     "gsap": "^3.2.6",
     "ismobilejs": "^1.0.4",
     "lodash": "^4.17.15"
