--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "babel-jest": "^25.4.0",
-    "husky": "^4.2.5",
-    "ink-docstrap": "^1.3.2",
     "jest": "^25.3.0",
-    "jsdoc": "^3.6.4",
     "lerna": "^3.20.2"
   },
   "scripts": {
     "bootstrap": "lerna bootstrap --use-workspaces",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "publish": "lerna publish"
   }
 }
