--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "bootstrap": "lerna bootstrap --use-workspaces",
+    "test": "jest --coverage --passWithNoTests",
+    "publish": "lerna publish"
+  },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "babel-jest": "^25.4.0",
     "jest": "^25.3.0",
     "lerna": "^3.20.2"
-  },
-  "scripts": {
-    "bootstrap": "lerna bootstrap --use-workspaces",
-    "test": "jest --coverage",
-    "publish": "lerna publish"
   }
 }
