--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -10,11 +10,11 @@
   "license": "MIT",
   "devDependencies": {
     "chalk": "^4.0.0",
-    "clear": "^0.1.0",
     "figlet": "^1.3.0",
     "fs-extra": "^9.0.0",
     "inquirer": "^7.1.0",
-    "minimist": "^1.2.5"
+    "minimist": "^1.2.5",
+    "single-line-log": "^1.1.2"
   },
   "publishConfig": {
     "access": "public"
