--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,13 +8,12 @@
   "main": "index.js",
   "author": "Andrea 'Fiad' Fiadone",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "chalk": "^4.0.0",
     "figlet": "^1.3.0",
     "fs-extra": "^9.0.0",
     "inquirer": "^7.1.0",
-    "minimist": "^1.2.5",
-    "single-line-log": "^1.1.2"
+    "minimist": "^1.2.5"
   },
   "publishConfig": {
     "access": "public"
