--- a/packages/project/scaffold/.eslintrc
+++ b/packages/project/scaffold/.eslintrc
@@ -1,11 +1,41 @@
 {
+  "root": true,
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true,
+    "worker": true,
+    "jest": true
+  },
+  "extends": ["eslint:recommended"],
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 9,
     "sourceType": "module"
   },
-  "env": {
-    "es6": true,
-    "jest": true,
-    "node": true
+  "rules": {
+    "array-callback-return": "error",
+    "arrow-parens": ["error", "as-needed"],
+    "block-scoped-var": "error",
+    "comma-dangle": ["error", "never"],
+    "consistent-return": "error",
+    "curly": "error",
+    "dot-location": ["error", "property"],
+    "eqeqeq": ["error", "always"],
+    "max-classes-per-file": ["error", 1],
+    "no-async-promise-executor": "error",
+    "no-else-return": "error",
+    "no-import-assign": "error",
+    "no-trailing-spaces": ["error", {
+      "ignoreComments": true,
+      "skipBlankLines": true
+    }],
+    "no-unused-vars": ["error", {
+      "vars": "all",
+      "args": "after-used",
+      "ignoreRestSiblings": true
+    }],
+    "prefer-const": "error",
+    "semi": [2, "never"]
   }
 }
