--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.4.0",
     "babel-loader": "^8.1.0",
+    "core-js": "^3.6.5",
     "css-loader": "^3.5.3",
     "eslint": "^7.0.0",
     "html-webpack-plugin": "^4.3.0",
