[toolbox] component prototype

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
+./index.html
+./index.js
+./style.css
 .DS_Store
 .dev
 coverage
 node_modules
-index.html
-index.js
 lerna-debug.log
-style.css
 yarn-error.log
