--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jest": "^25.3.0",
     "lerna": "^3.20.2",
     "mini-css-extract-plugin": "^0.9.0",
+    "raw-loader": "^4.0.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
