unpublished and migrated packages excluded from lerna config

--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,9 @@
 {
-  "packages": ["packages/*"],
+  "packages": [
+    "packages/bundler",
+    "packages/cli",
+    "packages/design-system"
+  ],
   "npmClient": "yarn",
   "useWorkspaces": true,
   "version": "independent"
